# rust-flock

./: Cargo.toml  README.md
src/: app.rs  boid.rs  main.rs  point.rs  vector3.rs
