[package]

name = "flock"
version = "0.0.1"
authors = ["Mihnea Dobrescu-Balaur <mihnea@linux.com>"]


[[bin]]

name = "flock"

[dependencies.piston]

git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.sdl2_window]

git = "https://github.com/PistonDevelopers/sdl2_window.git"

[dependencies.graphics]

git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics.git"
